[gd_scene load_steps=9 format=3 uid="uid://35qgsxhgp6kw"]

[ext_resource type="Script" path="res://MainScript.gd" id="1_63xb8"]
[ext_resource type="Texture2D" uid="uid://cvb01yw8x5830" path="res://Assets/phoneplaceholder.png" id="1_jhlke"]
[ext_resource type="Texture2D" uid="uid://mggsaodajvfi" path="res://Assets/Knop_scam_clicker.png" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dgms5rfw7oerh" path="res://shop.tscn" id="4_hy2qq"]

[sub_resource type="Animation" id="Animation_lquwl"]
resource_name = "Click"
length = 0.135
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhoneButton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.133333),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_272bh"]
resource_name = "Hover"
length = 0.235
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhoneButton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.000434416, 0.233768),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_7mycd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhoneButton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vw27"]
_data = {
"Click": SubResource("Animation_lquwl"),
"Hover": SubResource("Animation_272bh"),
"RESET": SubResource("Animation_7mycd")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_63xb8")

[node name="icons" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)

[node name="PhoneButton" type="Button" parent="icons"]
visible = false
offset_left = 250.0
offset_top = 260.0
offset_right = 921.003
offset_bottom = 696.0
focus_mode = 0
icon = ExtResource("1_jhlke")

[node name="MoneyText" type="RichTextLabel" parent="."]
offset_left = 142.0
offset_top = 232.0
offset_right = 307.0
offset_bottom = 272.0

[node name="FlavourText" type="RichTextLabel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 49.0
offset_top = 15.0
offset_right = 355.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_colors/default_color = Color(1, 0.984314, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
bbcode_enabled = true

[node name="PassiveIncomeText" type="RichTextLabel" parent="."]
offset_left = 101.0
offset_top = 260.0
offset_right = 264.0
offset_bottom = 300.0

[node name="Shop" parent="." instance=ExtResource("4_hy2qq")]
offset_left = 388.0
offset_top = -1.0
offset_right = 388.0
offset_bottom = -1.0

[node name="PhoneButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 111.0
offset_top = 77.0
offset_right = 271.0
offset_bottom = 237.0
pivot_offset = Vector2(80, 80)
size_flags_horizontal = 4
texture_normal = ExtResource("4_1bvp3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5vw27")
}

[connection signal="mouse_entered" from="PhoneButton" to="." method="_on_phone_button_mouse_entered"]
[connection signal="mouse_exited" from="PhoneButton" to="." method="_on_phone_button_mouse_exited"]
[connection signal="pressed" from="PhoneButton" to="." method="_on_phone_button_pressed"]
